# pulseviz

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
share/: pulseviz.ini
src/: colorscheme.cpp  colorscheme.h  iniparser.cpp  iniparser.h  main.cpp  pulseaudio.cpp  pulseaudio.h  pulseviz.cpp  pulseviz.h  util.cpp  util.h  visualizer.cpp  visualizer.h  visualizerwindow.cpp  visualizerwindow.h
src/dsp/: bands.cpp  bands.h  sampler.cpp  sampler.h  spectrogramtexture.cpp  spectrogramtexture.h  stft.cpp  stft.h  util.cpp  util.h
src/gfx/: fbo.cpp  fbo.h  palette.cpp  palette.h  ringbuffertexture.cpp  ringbuffertexture.h  shader.cpp  shader.h  texture.cpp  texture.h  texture1d.cpp  texture1d.h  texture2d.cpp  texture2d.h  window.cpp  window.h
src/shader/: octavebands.frag.glsl  spectrogram.frag.glsl  spectrogram.vert.glsl  spectrogram3d.frag.glsl  spectrogram3d.vert.glsl  spectrum.frag.glsl  spectrum.vert.glsl  waveform.vert.glsl
src/visualizer/: dummy.cpp  dummy.h  octavebands.cpp  octavebands.h  spectrogram.cpp  spectrogram.h  spectrogram3d.cpp  spectrogram3d.h  spectrum.cpp  spectrum.h  waveform.cpp  waveform.h
src/visualizer/octavebands/: visualizer.cpp  visualizer.h
src/visualizer/spectrogram/: constants.h  visualizer.cpp  visualizer.h
src/visualizer/spectrogram3d/: visualizer.cpp  visualizer.h
src/visualizer/spectrum/: visualizer.cpp  visualizer.h
src/visualizer/waveform/: visualizer.cpp  visualizer.h
tests/: CMakeLists.txt  test_dsp.cpp  test_iniparser.cpp  test_pulseaudio.cpp  test_util.cpp
tests/data/: python_docs.ini
